[package]
name = "afp"
version = "0.1.0"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
edition = "2018"

[dependencies]
gio = "^0"
gdk = "^0"
cairo-rs = "^0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
rand = "0.6"

[dependencies.gtk]
version = "0.6.0"
features = ["v3_16"]
